--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/Theme.PlaylistMaker"
-    tools:context=".mediateka.ui.FavoriteFragment">
+    tools:context=".mediateka.ui.favorite.FavoriteFragment">
 
     <LinearLayout
         android:id="@+id/empty_favorite"
