--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -106,4 +106,31 @@
     <style name="AllBackgroundStyle">
         <item name="android:background">@color/yp_black</item>
     </style>
+
+    <style name="TextStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorAccent">@color/purple_550</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextBigStyle" parent="TextStyle">
+        <item name="android:padding">8dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">20dp</item>
+    </style>
+
+    <style name="TextSongStyle" parent="TextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextArtiStyle" parent="TextStyle">
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">11sp</item>
+    </style>
 </resources>
