--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -150,5 +150,47 @@
     <style name="AllBackgroundStyle">
         <item name="android:background">@color/white</item>
     </style>
+    <style name="ButtonStyle">
+        <item name="android:backgroundTint">@color/text_color</item>
+        <item name="android:textColor">@color/background_icon</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="CapTextStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/text_color</item>
+    </style>
+
+    <style name="TextStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="colorAccent">@color/purple_550</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextBigStyle" parent="TextStyle">
+        <item name="android:padding">8dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginStart">20dp</item>
+    </style>
+
+    <style name="TextSongStyle" parent="TextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextArtiStyle" parent="TextStyle">
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">11sp</item>
+    </style>
 
 </resources>
