--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/all_views_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/size_sl">
@@ -14,7 +15,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="@dimen/size_sl"
-        android:src="@drawable/arrow_back" />
+        android:src="@drawable/arrow_back"
+        tools:ignore="UseAppTint"
+        android:tint="@color/text_color"
+        />
 
     <TextView
         android:id="@+id/tv_new_playlist"
@@ -27,7 +31,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/iv_coverPl"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="@dimen/size_xxs"
@@ -77,6 +81,7 @@
         android:hint="@string/name_playlist">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/iet_namePl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textCursorDrawable="@drawable/cursor_drawable"
@@ -101,6 +106,7 @@
         android:hint="@string/descript_playlist">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/iet_descriptPl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textCursorDrawable="@drawable/cursor_drawable"
@@ -114,7 +120,7 @@
         android:id="@+id/tv_button_new"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/size_sl"
+        android:layout_marginVertical="@dimen/size_sl"
         android:text="@string/create"
         android:theme="@style/Theme.PlaylistMaker"
         android:textAppearance="@style/MediaButtonStyle"
@@ -123,6 +129,7 @@
         android:tooltipText="@string/new_playlist"
         app:cornerRadius="@dimen/size_xl"
         android:background="@drawable/select_button_color"
+        app:layout_constraintTop_toBottomOf="@id/et_descriptPl"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:strokeWidth="@dimen/icon_padding" />
