--- a/app/src/main/res/layout/layout_playlist.xml
+++ b/app/src/main/res/layout/layout_playlist.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/size_xxs"
-    android:background="@color/background_icon">
+    >
 
     <ImageView
         android:id="@+id/iv_cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@drawable/media_placeholder"
         app:circularflow_viewCenter="@color/background_icon"
         app:layout_constraintDimensionRatio="w,1:1"
