--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,5 +30,6 @@
     <dimen name="text_22sp">22sp</dimen>
     <dimen name="text_19sp">19sp</dimen>
     <dimen name="text_14sp">14sp</dimen>
+    <dimen name="text_11sp">11sp</dimen>
 
 </resources>
